# DevOps_FinalProject_2025-2

./: .coverage  .env  .flake8  .gitignore  Makefile  README.md  alembic.ini  coverage.xml  library.db  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci-cd.yml  ci.yml  ci_cd.yml  main_biblioteca-ulima-app.yml
alembic/: env.py
alembic/versions/: 130519ed71e9_create_books_table.py
app/: auth.py  crud.py  db.py  main.py  models.py  schemas.py
app/static/: styles.css
app/templates/: base.html  book_form.html  books_list.html  login.html
backend/: Dockerfile  requirements.txt
backend/app/: crud.py  db.py  main.py  models.py  schemas.py
backend/tests/: test_books.py
biblioteca.egg-info/: PKG-INFO  SOURCES.txt
frontend/: index.html
infra/: docker-compose.yml
infra/flyway/sql/: V1__create_tables.sql
jmeter/: api_books.jmx  results.jtl  results_%ts%.jtl
jmeter/report/: index.html  statistics.json
jmeter/report/content/js/: dashboard.js  graph.js
jmeter/report/content/pages/: CustomsGraphs.html  OverTime.html  ResponseTimes.html  Throughput.html
jmeter/report_%ts%/: index.html  statistics.json
jmeter/report_%ts%/content/js/: dashboard.js  graph.js
jmeter/report_%ts%/content/pages/: CustomsGraphs.html  OverTime.html  ResponseTimes.html  Throughput.html
postman/: biblioteca.postman_collection.json
tests/: conftest.py
tests/api/: test_api_more.py
tests/functional/: test_login_selenium.py
tests/ui/: test_logout.py  test_more_views.py  test_views_jinja.py
tests/unit/: test_api_books.py  test_crud.py  test_db_get_db.py
