[project]
name = "biblioteca-devops"
version = "1.0.0"
description = "Sistema de gestión de biblioteca para el curso de DevOps"
authors = [
    { name="Lord Ennard"}
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "alembic",
    "jinja2",
    "python-multipart",
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."] 
include = ["app*"]
